test/parsing/BlockMissingClosingBrace.good
BlockMissingClosingBrace.chpl:3: syntax error: (no location given)
